# kgr

./: .gitignore  .kgr-baseline.json  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  README.md  RUST_SCORE.MD  STORY_STYLE.md  deny.toml  install.ps1  install.sh  justfile  spec.md  the_comprehensive_rust_best_practices_reference.md
.claude/agents/: comedy-code-roaster.md
.github/workflows/: auto-version.yml  ci.yml  release.yml
crates/kgr/: Cargo.toml  build.rs
crates/kgr-core/: Cargo.toml
crates/kgr-core/src/: detect.rs  graph.rs  lib.rs  resolve.rs  types.rs
crates/kgr-core/src/parse/: bash.rs  c.rs  cpp.rs  csharp.rs  elixir.rs  go.rs  haskell.rs  java.rs  javascript.rs  lua.rs  mod.rs  objc.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  swift.rs  typescript.rs  zig.rs
crates/kgr/src/: agent_docs.rs  baseline.rs  cache.rs  config.rs  main.rs  pipeline.rs  rules.rs  walk.rs
crates/kgr/src/render/: dot.rs  json.rs  mermaid.rs  mod.rs  table.rs  tree.rs
crates/kgr/tests/: e2e_languages.rs  integration.rs  snapshots.rs  symbols.rs
crates/kgr/tests/snapshots/: snapshots__snap_js_mixed_dot.snap  snapshots__snap_js_mixed_json.snap  snapshots__snap_js_mixed_mermaid.snap  snapshots__snap_js_mixed_table.snap  snapshots__snap_js_mixed_tree.snap  snapshots__snap_js_simple_dot.snap  snapshots__snap_js_simple_json.snap  snapshots__snap_js_simple_mermaid.snap  snapshots__snap_js_simple_table.snap  snapshots__snap_js_simple_tree.snap  snapshots__snap_python_cycle_check.snap  snapshots__snap_python_simple_dot.snap  snapshots__snap_python_simple_json.snap  snapshots__snap_python_simple_mermaid.snap  snapshots__snap_python_simple_table.snap  snapshots__snap_python_simple_tree.snap  snapshots__snap_rust_local_modules_json.snap  snapshots__snap_rust_local_modules_orient_json.snap  snapshots__snap_rust_local_modules_tree.snap  snapshots__snap_ts_cycle_check.snap  snapshots__snap_ts_cycle_mermaid.snap  snapshots__snap_ts_simple_dot.snap  snapshots__snap_ts_simple_json.snap  snapshots__snap_ts_simple_mermaid.snap  snapshots__snap_ts_simple_table.snap  snapshots__snap_ts_simple_tree.snap
sprint/_unscoped/: blitz-2026-06-09T22-25-41Z.md  blitz-2026-06-10T05-07-32Z.md  blitz-2026-06-10T16-50-00Z.md
tests/fixtures/javascript/mixed/: app.mjs  helper.js
tests/fixtures/javascript/simple/: index.js
tests/fixtures/python/calls/: app.py  db.py  service.py  utils.py
tests/fixtures/python/cycle/: a.py  b.py  c.py
tests/fixtures/python/simple/: main.py  models.py  utils.py
tests/fixtures/rust/local_modules/src/: cli.rs  main.rs
tests/fixtures/typescript/calls/: app.ts  db.ts  service.ts  utils.ts
tests/fixtures/typescript/cycle/: a.ts  b.ts  c.ts
tests/fixtures/typescript/simple/: main.ts
