[workspace]
members = ["crates/kgr-core", "crates/kgr"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"

[workspace.dependencies]
# Parsing
tree-sitter = "0.25"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.23.3"
tree-sitter-go = "0.23.4"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"

# Graph
petgraph = { version = "0.8", features = ["serde-1"] }

# Error handling
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
