[workspace]
members = ["crates/kgr-core", "crates/kgr"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81.0"

[workspace.dependencies]
# Parsing
tree-sitter = "0.25"
tree-sitter-python = "0.23.6"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.23.3"
tree-sitter-go = "0.23.4"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-zig = "1.1.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-objc = "3.0.2"
tree-sitter-swift = "0.7.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-scala = "0.24.0"
tree-sitter-lua = "0.5.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-bash = "0.25.1"

# Graph
petgraph = { version = "0.8", features = ["serde-1"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Noisy pedantic lints to suppress
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_docs_in_private_items = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
doc_markdown = "allow"
single_match_else = "allow"
match_wildcard_for_single_variants = "allow"
needless_raw_string_hashes = "allow"
uninlined_format_args = "allow"
unused_self = "allow"
redundant_closure_for_method_calls = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
explicit_iter_loop = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
too_many_lines = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
stable_sort_primitive = "allow"
if_not_else = "allow"
map_unwrap_or = "allow"
ref_option = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
