[package]
name = "kgr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core graph engine for kgr — polyglot import dependency analyzer"

[dependencies]
tree-sitter.workspace = true
streaming-iterator = "0.1"
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-go.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-php.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-bash.workspace = true

petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
